applications/test-my-webserver/service-my-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-webserver
  name: my-webserver
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-webserver
  sessionAffinity: None
  type: ClusterIP
