applications/test-my-webserver/ingress-my-webserver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-webserver
spec:
  rules:
  - host: my-webserver.k3sdemo.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-webserver
            port:
              number: 80
